--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   </head>
 
   <body class="bg-dark text-light">
+    <form id="taille-grille">
+      <input type="range" id="paires" min="4" max="12" step="2" value="6" />
+      <button type="submit">Appliquer</button>
+    </form>
+
     <div class="container mt-5 text-center">
       <h1 class="display-4 mb-5">PokeMemon Game</h1>
       <h2 class="mb-5">
@@ -36,7 +41,9 @@
         >
         <span class="badge rounded-pill bg-primary"
           >Record :
-          <span id="stat_nombre_de_coups" class="badge rounded-pill bg-danger"
+          <span
+            id="stat_record_nombre_de_coups"
+            class="badge rounded-pill bg-danger"
             >0</span
           >
           coups</span
@@ -54,86 +61,21 @@
       <div class="row justify-content-center mt-5">
         <div class="col-md-8">
           <!-- GRILLE DE JEU -->
-          <div id="grille_de_jeu" class="row row-cols-4">
-            <div class="col box">
-              <!-- POUR L'EXEMPLE -->
-              <img
-                src="https://img.pokemondb.net/sprites/scarlet-violet/normal/venusaur.png"
-                class="pokemon"
-              />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <!-- POUR L'EXEMPLE -->
-              <img
-                src="https://img.pokemondb.net/sprites/scarlet-violet/normal/pikachu.png"
-                class="pokemon"
-              />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <!-- POUR L'EXEMPLE -->
-              <img
-                src="https://img.pokemondb.net/sprites/scarlet-violet/normal/charizard.png"
-                class="pokemon"
-              />
-              <img src="./assets/pokeball.png" class="pokeball" />
-            </div>
-
-            <div class="col box">
-              <!-- POUR L'EXEMPLE -->
-              <img
-                src="https://img.pokemondb.net/sprites/scarlet-violet/normal/charizard.png"
-                class="pokemon"
-              />
-              <img src="./assets/pokeball.png" class="pokeball" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-
-            <div class="col box">
-              <img src="./assets/bush.webp" class="bush" />
-            </div>
-          </div>
-          <!-- FIN DE GRILLE DE JEU -->
+          <div id="grille_de_jeu" class="row row-cols-4"></div>
         </div>
       </div>
+      <!-- FIN DE GRILLE DE JEU -->
     </div>
 
     <div id="sidebar" class="d-flex flex-column align-items-start">
       <span class="badge rounded-pill bg-primary"> Pokemons capturés </span>
-      <div class="liste_pokemons_captures">
-        <!-- POUR L'EXEMPLE -->
-        <img
-          src="https://img.pokemondb.net/sprites/scarlet-violet/normal/charizard.png"
-        />
-      </div>
+      <div class="liste_pokemons_captures"></div>
     </div>
+
+    <template id="template-boite" style="display: none">
+      <div class="col box">
+        <img src="./assets/bush.webp" class="bush" />
+      </div>
+    </template>
   </body>
 </html>
