feat: ajout d'un label au curseur

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
   <body class="bg-dark text-light">
     <form id="taille-grille">
-      <input type="range" id="paires" min="4" max="12" step="2" value="6" />
-      <button type="submit">Appliquer</button>
+      <label for="paires">Nombre de paires</label>
+      <input type="range" id="paires" min="2" max="6" step="1" value="3" />
+      <input type="submit" value="Appliquer" />
     </form>
 
     <div class="container mt-5 text-center">
