fix: déplacement du bouton rejouer dans le fichier HTML

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
       <input type="submit" value="Appliquer" />
     </form>
 
+    <div class="row mt-5">
+      <div class="col">
+        <button type="button" id="rejouer" class="btn btn-primary btn-lg">
+          Rejouer <i class="bi bi-arrow-clockwise"></i>
+        </button>
+      </div>
+    </div>
+
     <div class="container mt-5 text-center">
       <h1 class="display-4 mb-5">PokeMemon Game</h1>
       <h2 class="mb-5">
@@ -50,14 +58,6 @@
           coups</span
         >
       </h2>
-
-      <div class="row mt-5">
-        <div class="col">
-          <button id="rejouer" class="btn btn-primary btn-lg">
-            Rejouer <i class="bi bi-arrow-clockwise"></i>
-          </button>
-        </div>
-      </div>
 
       <div class="row justify-content-center mt-5">
         <div class="col-md-8">
